--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,7 +2,7 @@
     background-color: white;
     height: 70px;
     width: 100%;
-    border: solid 1px #DDDDDD;
+    border: 1px #DDDDDD solid;
     border-radius: 4px;
     display: flex;
     justify-content: flex-end;
